# mkiicp

./: README.md
claude/: CMakeLists.txt  claude_main.cpp
claude-mna/: CMakeLists.txt  PreampSimulator.h  claude_main.cpp  main.cpp  mkiicp.hpp
experiments/claude/: claude_main.cpp
experiments/gpt/: CMakeLists.txt  gpt_main.cpp
gemini/: CMakeLists.txt  main.cpp  sim.hpp  tonestack.h  tubemodel.h  waveshaper.h
gpt/: gpt_main.cpp
mna/: CMakeLists.txt  Coupling1.h  LeadAndMixerStage.h  LeadPathCoupling.h  LeadPathCoupling2.h  MNASolver.h  MarkIICPreamp.h  MixerAndV2B.h  Triode.h  V1A_ToneStack.h  V1B_Stage.h  V2A_OutputStage.h  V2B_Stage.h  V3B_Stage.h  V4A_Stage.h  WaveFile.h  main.cpp  prompt.md
mna-segmented/: CMakeLists.txt  FinalStageAndMaster.cpp  FinalStageAndMaster.h  InputAndToneStage.cpp  InputAndToneStage.h  Interstage_C7_R9.cpp  Interstage_C7_R9.h  LeadChannelFinisher.cpp  LeadChannelFinisher.h  LeadDriveNetwork.cpp  LeadDriveNetwork.h  MNASolver.h  MainMixer.cpp  MainMixer.h  Matrix.h  MkiicPreamp.cpp  MkiicPreamp.h  TubeModel.h  TubeParams.h  TubeStageV1B.cpp  TubeStageV1B.h  TubeStageV2B.cpp  TubeStageV2B.h  TubeStageV3B.cpp  TubeStageV3B.h  WaveFile.h  main.cpp
preamp/: CMakeLists.txt  IIRBiquad.h  IIRFilter.h  Preamp.cpp  Preamp.h  ToneStack.cpp  ToneStack.h  ToneStackMNA.h  TubeStage.cpp  TubeStage.h  main.cpp
py/: Draft1.txt  plot.py  v1a.py  v1b.py  v3b.py
spice/: 12AX7.cir  mkiic++.asc  mkiic+-full.net  mkiic+.asc  mkiic+.net  mkiicp-gen.net  mkiicp-pre-stg1-2.net  v1a.net  v1b.net  v3b.net
